[build-system]
requires = ["setuptools>=70.1", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight-data"
version = "0.1.3"
description = "Client SDK for FinSight read-only latest-trade-day data API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["compiled_src*"]

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd", "*.dll", "*.dylib"]

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = ["pp*"]
build-verbosity = 1
test-command = "python -c \"from finsight_data import FinSightDataClient; client = FinSightDataClient(token='ci-smoke-token'); assert client.device_fingerprint; print(client.device_fingerprint[:12])\""
environment = { FINSIGHT_BUILD_COMPILED = "1", FINSIGHT_COMPILED_SOURCE_DIR = "finsight_data" }
